--- a/src/components/ServicesPage/ServicesPage.css
+++ b/src/components/ServicesPage/ServicesPage.css
@@ -1,6 +1,5 @@
 
 .services-container {
-    max-width: 1200px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -9,6 +8,7 @@
   }
   
   .service-card {
+    width: 400px;
     background-color: #f9f9f9;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
