--- a/src/components/BlogPage/BlogPage.css
+++ b/src/components/BlogPage/BlogPage.css
@@ -7,11 +7,10 @@
 
 .blog-list {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  list-style: none;
-  padding: 0;
-  margin: 0;
+    flex-wrap: wrap;
+    justify-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
 }
 
 .blog-item {
