--- a/src/components/BlogPostPage/BlogPostPage.css
+++ b/src/components/BlogPostPage/BlogPostPage.css
@@ -45,3 +45,12 @@
     justify-content: space-between;
     align-items: center;
 }
+@media screen and (max-width: 576px) {
+  .blog-post-image{
+    width: 100%;
+    height: 30vh;
+  }  
+  .blog-post-title{
+    font-size: 28px;
+  }
+}
