--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,3 +1,4 @@
+/* src/styles/LandingPage.css */
 .landing-page {
   text-align: center;
   padding: 50px;
@@ -114,5 +115,38 @@
   to {
     opacity: 1;
     transform: translateX(0);
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .landing-page {
+    padding: 10% 5%;
+  }
+
+  .hero h1 {
+    font-size: 28px; 
+  }
+
+  .hero p {
+    font-size: 4vw; 
+  }
+
+  .btn-primary {
+    font-size: 3vw; 
+  }
+
+  .values {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .value{
+    margin: 10px;
+  }
+  .value h3{
+   margin: 10px; 
+  }
+  .our-heading{
+    font-size: 28px;
   }
 }
